fix shifting image issue when hovering over games on the dashboard

--- a/app/components/grid-item/styles.scss
+++ b/app/components/grid-item/styles.scss
@@ -2,6 +2,7 @@
   &:hover {
     border: 1px solid white;
   }
+  border: 1px solid black;
   position:relative;
   top: 500px;
   display: inline-block;
